Avoiding the centerer on mobile

--- a/www/static/css/_components.scss
+++ b/www/static/css/_components.scss
@@ -7,7 +7,7 @@
 }
 
 .intro {
-  padding: 0 20px;
+  padding: 40px 20px 0;
   box-sizing: border-box;
   color: #fff;
   
@@ -191,6 +191,7 @@
 }
 
 .question-container {
+  @include display-flex;
   @include align-items(stretch);
   @include desktop {
     @include align-items(center);
@@ -472,7 +473,7 @@
   opacity: 0;
   color: #fff;
   text-align: center;
-  padding: 0 20px;
+  padding: 40px 20px 0;
   box-sizing: border-box;
   
   @include desktop {
